@@ -13,3 +13,4 @@
 - Remove racer integrace since it's development has been discontinued.
 - Enable tests for Emacs 29.2
 - Add fixes for enabling tree sitter support from rust-mode.
+- Make ~rustic-cargo-clippy~ remember it's universal arguments.
